syntax = "proto3";

package ratings.features.chart;

service Chart {
  rpc GetChart (GetChartRequest) returns (GetChartResponse) {}
}

message GetChartRequest {
  Timeframe timeframe = 1;
}

message GetChartResponse {
  Timeframe timeframe = 1;
  repeated ChartData ordered_chart_data = 2;
}

message ChartData {
  string app = 1;
  uint64 total_up_votes = 2;
  uint64 total_down_votes = 3;
  float rating = 4;
  RatingsBand rating_band = 5;
}

enum Timeframe {
  TIMEFRAME_UNSPECIFIED = 0;
  TIMEFRAME_WEEK = 1;
  TIMEFRAME_MONTH = 2;
}

enum RatingsBand {
  VERY_GOOD = 0;
  GOOD = 1;
  NEUTRAL = 2;
  POOR = 3;
  VERY_POOR = 4;
  INSUFFICIENT_VOTES = 5;
}
